--- a/style.css
+++ b/style.css
@@ -6,16 +6,21 @@ h1 {
     cursor: -webkit-grab;
     background: #fffd;
     padding: 2px 50px;
+    top: 0;
+    left: 0;
+    position: absolute;
 }
 body {
     border: 1px solid #0005;
     box-sizing: border-box;
     background: #0001;
-    background: linear-gradient(45deg, transparent 67%, black 67%);
+    background: linear-gradient(45deg, transparent 67%, #0005 67%);
     background-size: 3px 3px;
     min-height: 100vh;
     margin: 0;
 }
+
+body {pointer-events: none}
 
 #glcontext {
     position: absolute;
@@ -68,3 +73,51 @@ body {
     top: 4px;
     left: 4px;
 }
+
+
+/* 3d css box */
+.box-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 500px;
+    width: 500px;
+    perspective: 800px;
+}
+.box-main {
+    width: 500px;
+    height: 500px;
+    position: relative;
+    transform-style: preserve-3d;
+    transform: translateZ(-100px);
+    transition: transform 1s;
+}
+.box-main.show-front  { transform: translateZ(-100px) rotateY(   0deg); }
+.box-main.show-right  { transform: translateZ(-100px) rotateY( -90deg); }
+.box-main.show-back   { transform: translateZ(-100px) rotateY(-180deg); }
+.box-main.show-left   { transform: translateZ(-100px) rotateY(  90deg); }
+.box-main.show-top    { transform: translateZ(-100px) rotateX( -90deg); }
+.box-main.show-bottom { transform: translateZ(-100px) rotateX(  90deg); }
+.box-main .box-face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #0005;
+    background: #fffa;
+}
+.box-front {
+    overflow: hidden;
+}
+
+
+.box-front  { transform: rotateY(  0deg) translateZ(250px); }
+.box-right  { transform: rotateY( 90deg) translateZ(250px); }
+.box-back   { transform: rotateY(180deg) translateZ(250px); }
+.box-left   { transform: rotateY(-90deg) translateZ(250px); }
+.box-top    { transform: rotateX( 90deg) translateZ(250px); }
+.box-bottom { transform: rotateX(-90deg) translateZ(250px); }
